@@ -20,7 +20,7 @@
 
 #include "../dfsch/stream.h"
 
-#include <strings.h>
+#include <string.h>
 #include <unistd.h>
 #include <stdlib.h>
 
